--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -20,25 +20,9 @@
 
         </header>
 
-        <div 
-            role="progressbar" 
-            class="mdc-linear-progress mdc-linear-progress--indeterminate" 
-            aria-label="Example Progress Bar" aria-valuemin="0" 
-            aria-valuemax="1" 
-            aria-valuenow="0"
-            id="progressIndicator"
-        >
-            <div class="mdc-linear-progress__buffer">
-            <div class="mdc-linear-progress__buffer-bar"></div>
-            <div class="mdc-linear-progress__buffer-dots"></div>
-            </div>
-            <div class="mdc-linear-progress__bar mdc-linear-progress__primary-bar">
-            <span class="mdc-linear-progress__bar-inner"></span>
-            </div>
-            <div class="mdc-linear-progress__bar mdc-linear-progress__secondary-bar">
-            <span class="mdc-linear-progress__bar-inner"></span>
-            </div>
-        </div>
+        <section id="progressContainer">
+
+        </section>
 
         <section id="mainContent">
 
