--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -34,6 +34,7 @@
     </main>
 
     <!-- <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script> -->
+    <script src="https://www.paypal.com/sdk/js?client-id=sb"></script>
     <script src="bundle.js" async></script>
     <!-- <script src="../main.js"></script> -->
 </body>
