paypal payment implemented

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -34,8 +34,11 @@
     </main>
 
     <!-- <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script> -->
-    <script src="https://www.paypal.com/sdk/js?client-id=sb"></script>
+    <!-- <script src="https://www.paypal.com/sdk/js?client-id=sb"></script> -->
     <script src="bundle.js" async></script>
+    <script 
+        src="https://www.paypal.com/sdk/js?client-id=ARfroC_l0cHfksG5wQvBkOxJtuZuCvkTnqSBachxmLaQZZbChGk7DVH6oI1u_XtaWrSm7KNDF_qA8Gud"
+    ></script>
     <!-- <script src="../main.js"></script> -->
 </body>
 </html>
